<resources>
    <string name="app_name">Covid Tracer</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="past_journeys">Past journeys</string>
    <string name="settings">Settings</string>
    <string name="help_amp_faq"><![CDATA[Help & FAQ]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about">About</string>
    <string name="current_lockdown_status"><![CDATA[<Current Lockdown Status>]]></string>
    <string name="destination">Destination</string>
    <string name="select_date">Select date</string>
    <string name="create_new_journey">Create new journey</string>
    <string name="set_time">Set time</string>
    <string name="set_destination">Set destination</string>
    <string name="api_key">AIzaSyCGBljRVzeqSlFskrxRcDhoax2j9084t6A</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="passwords_don_t_match">(Passwords don\'t match!)</string>
    <string name="this_field_is_required">(This field is required!)</string>
    <string name="create_one">Create one!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="date">Date:</string>
    <string name="journey_details">Journey Details</string>
    <string name="start">Start</string>
    <string name="dest">Dest:</string>
    <string name="current_password">Current Password</string>
    <string name="home">Home</string>
    <string name="send_email">Send email</string>
    <string name="account_settings">Account settings</string>
    <string name="logout">Logout</string>
</resources>
