<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".JourneyDetailsActivity"
    tools:showIn="@layout/layout_journey_details">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <TextView
            android:id="@+id/title_hist"
            android:text="@string/journey_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:id="@+id/start_time_hist"
            android:text="Start time:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="15dp"
            />
        <EditText
            android:id="@+id/end_time_hist"
            android:text="End time:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="15dp"
            />
        <EditText
            android:id="@+id/date_hist"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="15dp"
            />
        <EditText
            android:id="@+id/start_hist"
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="15dp"
            />
        <EditText
            android:id="@+id/dest_hist"
            android:text="@string/dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="15dp"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

