<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_login4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/current_password_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password1_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/password2_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="cancel"
                android:background="@drawable/my_button"
                android:textColor="@color/quantum_white_text"
                android:layout_weight="0.5"/>
            <Button
                android:id="@+id/btn_save_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="save"
                android:background="@drawable/my_button"
                android:textColor="@color/quantum_white_text"
                android:layout_weight="0.5"/>

        </LinearLayout>


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>