<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_margin="30dp"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textEmailAddress"
            android:hint="E-mail"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:drawableRight="@drawable/ic_email_black_24dp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="Password"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:drawableRight="@drawable/ic_lock_black_24dp" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:onClick="login"/>
        <EditText
            android:id="@+id/txt_forgot_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="forgotPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Don't have an account?"/>
            <EditText
                android:id="@+id/create_acc_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create one!"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="createAccount"/>
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>