<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".CreatAccActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:id="@+id/warning_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:textColor="@color/colorRed"
            android:layout_marginStart="30dp"
            android:focusable="false"

            />
        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/warning_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:textColor="@color/colorRed"
            android:layout_marginStart="30dp"
            android:focusable="false"

            />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/warning_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:textColor="@color/colorRed"
            android:layout_marginStart="30dp"
            android:focusable="false"

            />
        <EditText
            android:id="@+id/email_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/warning_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:textColor="@color/colorRed"
            android:layout_marginStart="30dp"
            android:focusable="false"

            />
        <EditText
            android:id="@+id/password1_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/warning_password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_field_is_required"
            android:textColor="@color/colorRed"
            android:layout_marginStart="30dp"
            android:focusable="false"

            />
        <EditText
            android:id="@+id/password2_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="register"
            android:background="@drawable/my_button"
            android:textColor="@color/quantum_white_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Already a member?"
                android:focusable="false"
                />
            <EditText
                android:id="@+id/sign_in_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="loginScreen"
                android:focusable="false"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>